# ClaimSync

./: README.md
Solution 2 3 1/: Solution 2 3 1.uipx  SolutionStorage.json
Solution 2 3 1/AG_Claim_Analysis_Core/: agent.json  entry-points.json  flow-layout.json  project.uiproj
Solution 2 3 1/AG_Decision_Support/: agent.json  entry-points.json  flow-layout.json  project.uiproj
Solution 2 3 1/AG_Final_Summary/: agent.json  entry-points.json  project.uiproj
Solution 2 3 1/AG_Fraud_Risk/: agent.json  entry-points.json  project.uiproj
Solution 2 3 1/AG_PDF_Extraction/: entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  test_input.json
Solution 2 3 1/AG_PDF_Extraction/.uipath/: .telemetry.json  AG_PDF_Extraction.0.0.1.nupkg  AG_PDF_Extraction.0.0.2.nupkg  AG_PDF_Extraction.0.0.3.nupkg  AG_PDF_Extraction.0.0.4.nupkg  AG_PDF_Extraction.0.0.5.nupkg  AG_PDF_Extraction.0.0.6.nupkg  AG_PDF_Extraction.0.0.7.nupkg
Solution 2 3 1/Claim_Sync/: EXTRACTION_INVENTORY.md  Process.bpmn  Process.bpmn.bak  Process.bpmn.test  Process.bpmn.tmp  Process_new.bpmn  bindings_v2.json  entry-points.json  project.uiproj  test_from_tmp.txt
Solution 2 3 1/Request_Missing_Documents_Task/: Main.xaml  entry-points.json  project.json  project.uiproj
Solution 2 3 1/WF_Archive_Claim/: Main.xaml  Main.xaml.json  Write WFArchiveClaim Main.xaml.md  entry-points.json  project.json  project.uiproj
Solution 2 3 1/WF_Initialize_Claim_Record/: Main.xaml  Main.xaml.json  entry-points.json  project.json  project.uiproj
Solution 2 3 1/WF_Load_Agent_Knowledge/: Main.xaml  (+5 more)
(+199 files in other folders)
