[project]
name = "AG_PDF_Extraction"
version = "0.0.7"
description = "AG_PDF_Extraction"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
dependencies = [
    "pypdf2>=3.0.1",
    "uipath>=2.10.0, <2.11.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev>=0.0.80",
]
